[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.9"
ethers-providers = "2.0.9"
eyre = "0.6.8"
redis = "0.23.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }